# clion-sdl-test

./: CMakeLists.txt  main.cpp
cmake/: FindSDL2_Image.cmake
